# resolucao-de-problema-com-busca

./: .gitignore  README.md  gerador_de_entradas.py  main.py  pyproject.toml  viewer.py
A_estrela/: A_estrela.py
Busca Gulosa/: busca_gulosa.py
Busca_Gulosa/: busca_gulosa.py
Subida de Enconsta/: subida_de_encosta.py
Subida_de_Enconsta/: subida_de_encosta.py
data/: save.py
equacoes/: heuristicas.py
experimentos/: experimento_1.py  experimento_2.py  experimento_3.py  experimento_4.py
